extended the demo yaml config.

--- a/aecid-testsuite/demo/AMiner/demo-config.yml
+++ b/aecid-testsuite/demo/AMiner/demo-config.yml
@@ -795,120 +795,47 @@ Parser:
 
 Input:
         TimestampPath: "/model/DailyCron/DTM"
-        Verbose: false # use this to debug your parser-model
+        Verbose: False # use this to debug your parser-model
 
 Analysis:
         - type: TimestampsUnsortedDetector
-          id:
-
-
-
-        - type: "TimestampsUnsortedDetector"
-          id: "timestamps_unsorted_detector"
-        - type: "NewMatchPathValueDetector"
-          id: "new_match_path_value_detector"
-          paths: ["/accesslog/status"]
-        - type: "NewMatchPathValueComboDetector"
-          id: "new_match_path_value_combo_detector"
-          paths: ["/accesslog/method","/accesslog/request","/accesslog/useragent"]
-        - type: "LinearNumericBinDefinition"
-          id: "linear_numeric_bin_definition"
-          lower_limit: 50
-          bin_size: 5
-          bin_count: 20
-          outlier_bins_flag: true
-        - type: "ModuloTimeBinDefinition"
-          id: "modulo_time_bin_definition"
-          modulo_value: 86400
-          time_unit: 3600
-          lower_limit: 0
-          bin_size: 1
-          bin_count: 24
-          outlier_bins_flag: true
-        - type: "HistogramAnalysis"
-          histogram_defs: [["/model/RandomTime/Random", "linear_numeric_bin_definition"]]
-          report_interval: 10
-          output_logline: true
-        - type: "PathDependentHistogramAnalysis"
-          path: "/model/RandomTime"
-          bin_definition: "modulo_time_bin_definition"
-          report_interval: 10
-          output_logline: true
-        - type: "EnhancedNewMatchPathValueComboDetector"
-          paths: ["/model/DailyCron/UName", "/model/DailyCron/JobNumber"]
-          tuple_transformation_function: "demo"
-          output_logline: true
-        - type: "MatchFilter"
-          paths: ["/model/Random"]
-          value_list: [1, 10, 100]
-          output_logline: true
-        - type: "MatchValueAverageChangeDetector"
-          timestamp_path: None
-          paths: ["/model/Random"]
-          min_bin_elements: 100
-          min_bin_time: 10
-          output_logline: true
-        - type: "MatchValueStreamWriter"
-          stream: "sys.stdout"
-          paths: ["/model/Sensors/CPUTemp", "/model/Sensors/CPUWorkload", "/model/Sensors/DTM"]
-          separator: ";"
-          missing_value_string: ""
-        - type: "NewMatchPathDetector"
-          id: "new_match_path_detector"
-        - type: "PathExistsMatchRule"
-          id: "path_exists_match_rule1"
+          id: TimestampsUnsortedDetector
+        - type: PathExistsMatchRule
+          id: path_exists_match_rule1
           path: "/model/LoginDetails/PastTime/Time/Minutes"
-        - type: "PathExistsMatchRule"
-          id: "path_exists_match_rule2"
+        - type: PathExistsMatchRule
+          id: path_exists_match_rule2
           path: "/model/LoginDetails"
-        - type: "ValueMatchRule"
-          id: "value_match_rule"
+        - type: ValueMatchRule
+          id: value_match_rule
           path: "/model/LoginDetails/Username"
           value: "root"
-        - type: "NegationMatchRule"
-          id: "negation_match_rule1"
+        - type: NegationMatchRule
+          id: negation_match_rule1
           sub_rule: "value_match_rule"
-        - type: "NegationMatchRule"
-          id: "negation_match_rule2"
+        - type: NegationMatchRule
+          id: negation_match_rule2
           sub_rule: "path_exists_match_rule2"
-        - type: "AndMatchRule"
-          id: "and_match_rule1"
-          sub_rules: ["path_exists_match_rule1", "negation_match_rule1"]
-        - type: "AndMatchRule"
-          id: "and_match_rule2"
-          sub_rules: ["negation_match_rule1", "path_exists_match_rule2"]
-        - type: "OrMatchRule"
-          id: "or_match_rule"
-          sub_rules: ["and_match_rule1", "and_match_rule2", "negation_match_rule2"]
-        - type: "CorrelationRule"
-          rule_id: "correlation_rule"
-          min_time_delta: 5
-          max_time_delta: 6
-          max_artefacts_a_for_single_b: 1
-          artefact_match_parameters: [["/model/CronAnnouncement/JobNumber", "/model/CronExecution/JobNumber"]]
-        - type: "EventClassSelector"
-          action_id: "a_class_selector"
-          artefact_a_rules: ["correlation_rule"]
-        - type: "EventClassSelector"
-          action_id: "b_class_selector"
-          artefact_b_rules: ["correlation_rule"]
-        - type: "PathExistsMatchRule"
-          id: "path_exists_match_rule3"
-          path: "/model/CronAnnouncement/Run"
-          match_action: "a_class_selector"
-        - type: "PathExistsMatchRule"
-          id: "path_exists_match_rule4"
-          path: "/model/CronExecution/Job"
-          match_action: "b_class_selector"
-        - type: "TimeCorrelationViolationDetector"
-          id: "time_correlation_violation_detector"
-          ruleset: ["path_exists_match_rule3", "path_exists_match_rule4"]
-        - type: "SimpleMonotonicTimestampAdjust"
-          id: "simple_monotonic_timestamp_adjust"
-        - type: "WhitelistViolationDetector"
-          id: "whitelist_violation_detector"
-          whitelist_rules: ["or_match_rule"]
-
+        - type: AndMatchRule
+          id: and_match_rule1
+          sub_rules: [ "path_exists_match_rule1", "negation_match_rule1" ]
+        - type: AndMatchRule
+          id: and_match_rule2
+          sub_rules: [ "negation_match_rule1", "path_exists_match_rule2" ]
+        - type: OrMatchRule
+          id: or_match_rule
+          sub_rules: [ "and_match_rule1", "and_match_rule2", "negation_match_rule2" ]
+        - type: WhitelistViolationDetector
+          id: Whitelist
+          whitelist_rules: [ "or_match_rule" ]
+        - type: ParserCount
+          id: ParserCount
+          report_interval: 10
+          reset_after_report_flag: False
+        - type: EventCorrelationDetector
+          id: EventCorrelationDetector
+          check_rules_flag: True
+          hypothesis_max_delta_time: 1.0
 
 EventHandlers:
         - id: "stpe"
