--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,12 @@ install:
   - sudo ln -s /usr/lib/python3/dist-packages/dateutil /etc/aminer/conf-enabled/dateutil
   - sudo pip3 install six
   - sudo ln -s /usr/lib/python3/dist-packages/six.py /etc/aminer/conf-enabled/six.py
+  - sudo pip3 install PyYAML
+  - sudo ln -s /usr/lib/python3/dist-packages/yaml /etc/aminer/conf-enabled/
+  - sudo pip3 install cerberus
+  - sudo ln -s /usr/lib/python3/dist-packages/cerberus /etc/aminer/conf-enabled/
+  - sudo pip3 install setuptools
+  - sudo ln -s /usr/lib/python3/dist-packages/pkg_resources /etc/aminer/conf-enabled/
   - cd aecid-testsuite
   - sudo chmod +x runUnittests.sh
   - sudo chmod +x runAMinerDemo.sh
