fixed all errors for the yaml demo configs.

--- a/aecid-testsuite/demo/AMiner/demo-config.yml
+++ b/aecid-testsuite/demo/AMiner/demo-config.yml
@@ -708,6 +708,9 @@ Parser:
          type: SequenceModelElement
          name: 'DiskReport'
          args:
+           - space
+           - data
+           - rest
 
        - id: loginDetails
          type: SequenceModelElement
