fixed typo in template_config.yml

--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -141,5 +141,5 @@ EventHandlers:
           json: True # optional default: False
           type: StreamPrinterEventHandler
 
-        - id: "yslog
+        - id: syslog
           type: SyslogWriterEventHandler
