--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - sudo pip3 install -U scipy
   - sudo ln -s /usr/lib/python3.6/site-packages/numpy /etc/aminer/conf-enabled/
   - sudo ln -s /usr/lib/python3.6/site-packages/scipy /etc/aminer/conf-enabled/
+  - sudo ln -s /usr/lib/python3.6/site-packages/cerberus /etc/aminer/conf-enabled/
   - cd aecid-testsuite
   - sudo chmod +x runUnittests.sh
   - sudo chmod +x runAMinerDemo.sh
