--- a/aecid-testsuite/demo/AMiner/demo-config.yml
+++ b/aecid-testsuite/demo/AMiner/demo-config.yml
@@ -802,8 +802,8 @@ Parser:
            - parsingME
 
 Input:
-        TimestampPath: "/model/DailyCron/DTM"
-        Verbose: False # use this to debug your parser-model
+        timestamp_paths: ["/model/DailyCron/DTM"]
+        verbose: False # use this to debug your parser-model
 
 Analysis:
         - type: TimestampsUnsortedDetector
