--- a/aecid-testsuite/unit/data/configfiles/apache_inline_config_undefined_analysis_components.yml
+++ b/aecid-testsuite/unit/data/configfiles/apache_inline_config_undefined_analysis_components.yml
@@ -113,10 +113,9 @@ Parser:
                   - user_agent_model
                   - sq6
 Input:
-        TimestampPath: "/accesslog/time"
-        Verbose: False # use this to debug your parser-model
+        timestamp_paths: "/accesslog/time"
+        verbose: False # use this to debug your parser-model
 
 EventHandlers:
         - id: stpe
           type: StreamPrinterEventHandler
-
