--- a/aecid-testsuite/unit/data/configfiles/double_parserstart_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/double_parserstart_config.yml
@@ -20,9 +20,9 @@ Parser:
           args: apacheModel
 
 Input:
-        Verbose: True # optional
-        MultiSource: False # optional
-        TimestampPath: "/model/accesslog/time"
+        verbose: True # optional
+        multi_source: False # optional
+        timestamp_paths: "/model/accesslog/time"
 
 
 Analysis:
