--- a/aecid-testsuite/unit/data/configfiles/learnMode_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/learnMode_config.yml
@@ -17,8 +17,8 @@ Parser:
           args:
               - host_name_model
 Input:
-        TimestampPath: "/accesslog/time"
-        Verbose: False # use this to debug your parser-model
+        timestamp_paths: "/accesslog/time"
+        verbose: False # use this to debug your parser-model
 
 Analysis:
         - type: NewMatchPathValueDetector
