--- a/aecid-testsuite/unit/data/configfiles/missing_parserstart_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/missing_parserstart_config.yml
@@ -18,10 +18,9 @@ Parser:
           args: apacheModel
 
 Input:
-        Verbose: True # optional
-        MultiSource: False # optional
-        TimestampPath: "/model/accesslog/time"
-
+        verbose: True # optional
+        multi_source: False # optional
+        timestamp_paths: "/model/accesslog/time"
 
 Analysis:
         - type: NewMatchPathValueDetector
