--- a/aecid-testsuite/unit/data/configfiles/parser_child_elements_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/parser_child_elements_config.yml
@@ -49,9 +49,9 @@ Parser:
               - element_value_branch
 
 Input:
-        Verbose: True # optional
-        MultiSource: False # optional
-        TimestampPath: "/model/accesslog/time"
+        verbose: True # optional
+        multi_source: False # optional
+        timestamp_paths: "/model/accesslog/time"
 
 Analysis:
         - type: NewMatchPathValueDetector
