changed the output_logline parameter of the VTD in the yaml demo config.

--- a/aecid-testsuite/demo/AMiner/demo-config.yml
+++ b/aecid-testsuite/demo/AMiner/demo-config.yml
@@ -854,6 +854,7 @@ Analysis:
           id: VariableTypeDetector
           event_type_detector: EventTypeDetector
           silence_output_except_indicator: False
+          output_logline: False
         - type: EventCorrelationDetector
           id: EventCorrelationDetector
           check_rules_flag: True
