--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ before_install:
   - cp $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/source/root/etc/aminer/conf-enabled/ApacheAccessModel.py
   - ln -s $PWD/source/root/usr/lib/logdata-anomaly-miner/aminer $PWD/aecid-testsuite/aminer
   - ln -s $PWD/source/root/etc/aminer/template_config.py $PWD/aecid-testsuite/demo/AMiner/template_config.py
-  - ls roles
-  - ls roles/aminer
   - sed -e "s+{{SOURCEDIR}}+$PWD+g" .playbook.yml > playbook.yml
+  
+  - cp $PWD/main.yml roles/aminer/tasks/main.yml
 
 install:
   - sudo apt-get update -y
