renamed AMiner calls to aminer and AMinerRemoteControl to aminerRemoteControl in the aecid-testsuite.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,11 @@ before_install:
   - ln -s $PWD/source/root/etc/aminer/template_config.py $PWD/aecid-testsuite/demo/AMiner/template_config.py
   - sed -e "s+{{SOURCEDIR}}+$PWD+g" .playbook.yml > playbook.yml
   
+  # This and the files need to be removed!!!!!
+  ######################################################
   - cp $PWD/main.yml roles/aminer/tasks/main.yml
   - cp $PWD/Debian.yml roles/aminer/vars/Debian.yml
+  ######################################################
 
 install:
   - sudo apt-get update -y
