--- a/main.yml
+++ b/main.yml
@@ -67,6 +67,12 @@
     src: "/usr/lib/logdata-anomaly-miner/aminer.py"
     dest: "/usr/bin/aminer"
     state: "link"
+
+- name: Create Aminer-Link stable # TODO - remove after next AMiner release
+  file:
+    src: "/usr/lib/logdata-anomaly-miner/aminer.py"
+    dest: "/usr/bin/AMiner"
+    state: "link"
  
 - name: Set aminer permissions
   file:
@@ -75,27 +81,17 @@
     group: root
     mode: 0755
 
-- name: Install python3-cerberus
-  pip:
-    name: cerberus
-    executable: pip3
-
 - name: Install python3-kafka
-  pip:
-    name: kafka-python
-    executable: pip3
-
-- name: Install scipy
   pip:
     name: kafka-python
     executable: pip3
     state: latest
 
-- name: Link cerberus
-  shell:
-    cmd: find /usr/local/ -name cerberus -exec ln -s {} /etc/aminer/conf-enabled/cerberus \;
-    creates: /etc/aminer/conf-enabled/cerberus
-
+- name: link python3-cerberus
+  file:
+    src: /usr/lib/python3/dist-packages/cerberus
+    dest: /etc/aminer/conf-enabled/cerberus
+    state: link
 
 - name: Link kafka
   shell:
