changed default of auto_include_flag to false.

--- a/aecid-testsuite/demo/AMiner/demo-config.yml
+++ b/aecid-testsuite/demo/AMiner/demo-config.yml
@@ -859,6 +859,7 @@ Analysis:
           id: EventCorrelationDetector
           check_rules_flag: True
           hypothesis_max_delta_time: 1.0
+          auto_include_flag: True
         - type: MatchFilter
           id: MatchFilter
           paths:
@@ -873,6 +874,7 @@ Analysis:
             - "/model/DailyCron/UName"
             - "/model/DailyCron/JobNumber"
           tuple_transformation_function: "demo"
+          auto_include_flag: True
         - type: LinearNumericBinDefinition
           id: linear_numeric_bin_definition
           lower_limit: 50
@@ -917,6 +919,7 @@ Analysis:
           paths:
             - "/model/IPAddresses/Username"
             - "/model/IPAddresses/IP"
+          auto_include_flag: True
         - type: NewMatchIdValueComboDetector
           id: NewMatchIdValueComboDetector
           paths:
@@ -927,16 +930,19 @@ Analysis:
             - "/model/type/syscall/id"
           min_allowed_time_diff: 5
           allow_missing_values: True
+          auto_include_flag: True
         - type: NewMatchPathValueDetector
           id: NewMatchPathValue
           paths:
             - "/model/DailyCron/JobNumber"
             - "/model/IPAddresses/Username"
+          auto_include_flag: True
         - type: MissingMatchPathValueDetector
           id: MissingMatch
           path: "/model/DiskReport/Space"
           check_interval: 2
           realert_interval: 5
+          auto_include_flag: True
         - type: TimeCorrelationDetector
           id: TimeCorrelationDetector
           parallel_check_count: 2
