--- a/aecid-testsuite/unit/data/configfiles/missing_parserstart_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/missing_parserstart_config.yml
@@ -27,18 +27,18 @@ Analysis:
           paths: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
           output_logline: False # optional default: True
-          auto_include_flag: True
+          learn_mode: True
 
         - type: NewMatchPathValueComboDetector
           paths: ["/model/accesslog/request","/model/accesslog/method"]
-          auto_include_flag: True
+          learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
           output_logline: False # optional default: True
           allow_missing_values: False # optional default: False
 
         - type: NewMatchPathValueComboDetector
           paths: ["/model/accesslog/request","/model/accesslog/status"]
-          auto_include_flag: True
+          learn_mode: True
 
 EventHandlers:
         - id: stpe
