--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -28,7 +28,7 @@ Analysis:
           paths: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
           output_logline: False # optional default: True
-          auto_include_flag: True
+          learn_mode: True
 
         - type: NewMatchPathValueComboDetector
           paths: ["/model/accesslog/request","/model/accesslog/method"]
@@ -39,7 +39,7 @@ Analysis:
 
         - type: NewMatchPathValueComboDetector
           paths: ["/model/accesslog/request","/model/accesslog/status"]
-          auto_include_flag: True
+          learn_mode: True
 
 EventHandlers:
         - id: stpe
