--- a/aecid-testsuite/unit/data/configfiles/unknown_analysis_component.yml
+++ b/aecid-testsuite/unit/data/configfiles/unknown_analysis_component.yml
@@ -45,7 +45,7 @@ Analysis:
           paths: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
           output_logline: False # optional default: True
-          auto_include_flag: True
+          learn_mode: True
 
         - type: NewMatchPathValueComboDetector
           paths: ["/model/accesslog/request","/model/accesslog/method"]
@@ -56,7 +56,7 @@ Analysis:
 
         - type: UnknownDetector
           paths: ["/model/accesslog/request","/model/accesslog/status"]
-          auto_include_flag: True
+          learn_mode: True
 
 EventHandlers:
         - id: stpe
